--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ license = "Apache-2.0"
 readme = "README.md"
 edition = "2021"
 
+[workspace]
+members = ["macros"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
